improved configuration system with proper documentation see issue #3 replaced property configuration in spring configuration with p: namespace promoted spring to 4.0.6 fixed 2 DAO methods, which resulted in test fails added 2nd level cache for Hibernate. added automatic recalculation of statistics every night based on #26, the value is read from configuration file